[gd_scene load_steps=2 format=3 uid="uid://dsmws4th7n2ym"]

[ext_resource type="Script" path="res://scripts/fire_breath.gd" id="1_hj8n3"]

[node name="Fire Breath" type="Node2D"]
script = ExtResource("1_hj8n3")
metadata/_edit_group_ = true

[node name="SpawnFire" type="Timer" parent="."]
wait_time = 0.1

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="SpawnFire" to="." method="_on_spawn_fire_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
